--- a/uclouvain/rag-base/requirements.txt
+++ b/uclouvain/rag-base/requirements.txt
@@ -1,57 +1,104 @@
 accelerate==1.2.0
+aiohappyeyeballs==2.4.4
+aiohttp==3.11.11
+aiosignal==1.3.2
 annotated-types==0.7.0
 anyio==4.7.0
+async-timeout==5.0.1
+attrs==24.3.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
 click==8.1.7
 colorama==0.4.6
+coloredlogs==15.0.1
+datasets==3.2.0
+dill==0.3.8
 dnspython==2.7.0
 einops==0.8.0
 email_validator==2.2.0
+evaluate==0.4.3
+exceptiongroup==1.2.2
 fastapi==0.115.6
 fastapi-cli==0.0.6
 filelock==3.16.1
-fsspec==2024.10.0
+flatbuffers==24.12.23
+frozenlist==1.5.0
+fsspec==2024.9.0
 h11==0.14.0
 httpcore==1.0.7
 httptools==0.6.4
 httpx==0.28.1
 huggingface-hub==0.26.5
+humanfriendly==10.0
 idna==3.10
 Jinja2==3.1.4
+joblib==1.4.2
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 mpmath==1.3.0
+multidict==6.1.0
+multiprocess==0.70.16
 networkx==3.4.2
 numpy==2.2.0
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.4.127
+onnx==1.17.0
+onnxruntime==1.20.1
+onnxruntime-gpu==1.20.1
+optimum==1.23.3
 packaging==24.2
+pandas==2.2.3
+pillow==11.1.0
+propcache==0.2.1
+protobuf==5.29.2
 psutil==6.1.0
+pyarrow==18.1.0
 pydantic==2.10.3
 pydantic_core==2.27.1
 Pygments==2.18.0
 PyMuPDF==1.25.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.19
+pytz==2024.2
 PyYAML==6.0.2
 regex==2024.11.6
 requests==2.32.3
 rich==13.9.4
 rich-toolkit==0.12.0
 safetensors==0.4.5
-setuptools==75.6.0
+scikit-learn==1.6.0
+scipy==1.15.0
+sentence-transformers==3.3.1
 shellingham==1.5.4
+six==1.17.0
 sniffio==1.3.1
 starlette==0.41.3
 sympy==1.13.1
-tokenizers==0.21.0
+threadpoolctl==3.5.0
+tokenizers==0.20.3
 torch==2.5.1
 tqdm==4.67.1
-transformers==4.47.0
+transformers==4.46.3
+triton==3.1.0
 typer==0.15.1
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
 uvicorn==0.32.1
+uvloop==0.21.0
 watchfiles==1.0.0
 websockets==14.1
+xxhash==3.5.0
+yarl==1.18.3
