--- a/uclouvain/frontend/package.json
+++ b/uclouvain/frontend/package.json
@@ -15,6 +15,7 @@
     "@fontsource/roboto": "^5.1.1",
     "@mui/icons-material": "^6.4.1",
     "@mui/material": "^6.4.1",
+    "mui-markdown": "^1.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
