--- a/uclouvain/compose.yaml
+++ b/uclouvain/compose.yaml
@@ -130,6 +130,6 @@ services:
   # React frontend to demo the potential of this application.
   frontend:
     build: ./frontend
-    depends_on: [backend, database],
-    profiles:   [prod],
+    depends_on: [backend, database]
+    profiles:   [prod]
     ports:      ["3000:80"]
